--- a/index.html
+++ b/index.html
@@ -43,46 +43,53 @@
         <div class="space-y-4 mb-8">
             <!-- Link 1: Website Oficial -->
             <a 
-                href="https://www.masterplanimoveis.com.br" 
+                href="https://masterplanresende.com.br" 
                 target="_blank" 
                 rel="noopener noreferrer" 
                 class="block w-full bg-blue-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-blue-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
-                Website Oficial
+                Acesse nosso site
             </a>
-            <!-- Link 2: Imóveis à Venda -->
+            <!-- Link 2: Buscar Imóveis -->
             <a 
-                href="https://www.masterplanimoveis.com.br/imoveis-a-venda" 
+                href="https://masterplanresende.com.br/busca" 
                 target="_blank" 
                 rel="noopener noreferrer" 
                 class="block w-full bg-teal-600 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-teal-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
-                Imóveis à Venda
+                Busque um imóvel
             </a>
             <!-- Link 3: Fale Conosco no WhatsApp -->
             <a 
-                href="https://wa.me/55XXYYYYZZZZZ?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20um%20imóvel." 
+                href="https://api.whatsapp.com/send?phone=5524992661518&text=Ol%C3%A1%2C%20estou%20visitando%20o%20site%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es" 
                 target="_blank" 
                 rel="noopener noreferrer" 
                 class="block w-full bg-green-600 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-green-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
-                Fale Conosco no WhatsApp
+                Fale com a gente no WhatsApp
             </a>
             <!-- Link 4: Instagram -->
             <a 
-                href="https://instagram.com/masterplanimoveis" 
+                href="https://www.instagram.com/masterplan.resende/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
                 class="block w-full bg-pink-600 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-pink-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
                 Siga-nos no Instagram
             </a>
-            <!-- Link 5: Nosso Endereço / Contato -->
+            <!-- Link 5: Canal no YouTube -->
             <a 
-                href="mailto:contato@masterplanimoveis.com.br" 
+                href="mailto:contato@masterplanresende.com.br" 
                 class="block w-full bg-gray-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-gray-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
-                Nosso Endereço / Contato
+                Veja nosso canal no YouTube
+            </a>
+            <!-- Link 6: Nosso Endereço / Contato -->
+            <a 
+                href="https://www.youtube.com/@masterplanresende" 
+                class="block w-full bg-gray-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-gray-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
+            >
+                Mande-nos um E-mail
             </a>
         </div>
         
