Correção dos botões trocados no final da pilha.

--- a/index.html
+++ b/index.html
@@ -77,19 +77,21 @@
             >
                 Siga-nos no Instagram
             </a>
-            <!-- Link 5: Canal no YouTube -->
+            <!-- Link 5: Canal no YouTube (Cor alterada para vermelho) -->
             <a 
-                href="mailto:contato@masterplanresende.com.br" 
-                class="block w-full bg-gray-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-gray-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
+                href="https://www.youtube.com/@masterplanresende" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="block w-full bg-red-600 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-red-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
                 Veja nosso canal no YouTube
             </a>
             <!-- Link 6: Nosso Endereço / Contato -->
             <a 
-                href="https://www.youtube.com/@masterplanresende" 
+                href="mailto:contato@masterplanresende.com.br" 
                 class="block w-full bg-gray-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-gray-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
-                Mande-nos um E-mail
+                Mande-nos um e-mail
             </a>
         </div>
         
