--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 class="w-full h-40 mx-auto mb-4 object-contain" 
                 onerror="this.onerror=null;this.src='https://placehold.co/160x160/cccccc/000000?text=Erro';"
             >
+            <!-- Nome da empresa -->
+            <h1 class="text-3xl font-extrabold text-gray-800 mb-2">MasterPlan Imóveis</h1>
             <!-- Slogan ou descrição da empresa -->
             <p class="text-gray-600 text-lg">Seu próximo imóvel começa aqui. Realizando sonhos com excelência.</p>
         </div>
@@ -75,7 +77,16 @@
             >
                 Siga-nos no Instagram
             </a>
-            <!-- Link 5: Canal no YouTube (Cor alterada para vermelho) -->
+            <!-- Link 5: Facebook -->
+            <a 
+                href="https://www.facebook.com/people/Master-Plan-Resende/61568457718067/" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="block w-full bg-blue-800 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-blue-900 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
+            >
+                Siga-nos no Facebook
+            </a>
+            <!-- Link 6: Canal no YouTube (Cor alterada para vermelho) -->
             <a 
                 href="https://www.youtube.com/@masterplanresende" 
                 target="_blank" 
@@ -84,13 +95,31 @@
             >
                 Veja nosso canal no YouTube
             </a>
-            <!-- Link 6: Nosso Endereço / Contato -->
+            <!-- Link 7: Nosso Endereço / Contato -->
             <a 
                 href="mailto:contato@masterplanresende.com.br" 
                 class="block w-full bg-gray-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-md hover:bg-gray-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102"
             >
                 Mande-nos um e-mail
             </a>
+        </div>
+
+        <!-- Seção do Mapa -->
+        <div class="mt-8 pt-8 border-t border-gray-200">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Onde Estamos</h2>
+            <div class="relative" style="padding-bottom: 75%;"> <!-- Proporção 4:3 para responsividade -->
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.7170990520217!2d-44.46802588059065!3d-22.482140984436825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9e7ed708d3ffff%3A0xba333ab4dae6db73!2sMasterPlan%20Im%C3%B3veis!5e0!3m2!1sen!2sus!4v1749334987218!5m2!1sen!2sus"
+                    width="100%"
+                    height="100%"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    class="absolute top-0 left-0 w-full h-full rounded-lg shadow-md"
+                ></iframe>
+            </div>
+            <p class="text-gray-600 text-sm mt-4">Visite-nos em nosso endereço: Avenida Luiz Dias Martins, 37, Alphapark, Parque Ipiranga, Resende - RJ, 27511-970. Use o mapa para traçar sua rota!</p>
         </div>
         
         <!-- Rodapé da empresa -->
