Correção do formato da logo.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Imagem do logotipo da empresa ou foto de perfil -->
             <!-- Alterado para w-full para ter a mesma largura do cartão e h-40 para manter um tamanho definido -->
             <img 
-                src="./images/logo.svg" 
+                src="./images/logo.png" 
                 alt="Logotipo MasterPlan Imóveis" 
                 class="w-full h-40 mx-auto mb-4 object-contain" 
                 onerror="this.onerror=null;this.src='https://placehold.co/160x160/cccccc/000000?text=Erro';"
