--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* Define a fonte Inter globalmente para o corpo do documento */
         body {
             font-family: "Inter", sans-serif;
-            /* Cor de fundo revertida para #5f7175 */
+            /* Cor de fundo padrão (fallback) */
             background-color: #5f7175;
         }
         /* Estilização para o elemento foco (quando um link é selecionado) */
@@ -18,20 +18,28 @@
             outline: none; /* Remove o contorno padrão */
             box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5); /* Adiciona um brilho azul suave para acessibilidade */
         }
-        /* Não é mais necessário esconder o texto por padrão, pois a imagem não o substitui */
     </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
+    <!-- Imagem de fundo com desfoque condicional. O blur-xl é aplicado por padrão.
+         Se a imagem falhar, ela é escondida, revelando o background-color do body. -->
+    <img
+        src="./images/fundo.webp"
+        alt="Imagem de Fundo"
+        class="fixed inset-0 w-full h-full object-cover -z-10 blur-md"
+        onerror="this.style.display='none'; this.classList.remove('blur-md');"
+    >
+
     <!-- Contêiner principal para centralizar e limitar a largura do conteúdo -->
-    <div class="bg-white p-8 rounded-xl shadow-2xl max-w-md w-full text-center transform transition-all duration-300 hover:scale-105">
+    <div class="bg-white/80 p-8 rounded-xl shadow-2xl max-w-md w-full text-center transform transition-all duration-300 hover:scale-105 backdrop-blur-xl">
         <!-- Seção de perfil da empresa -->
         <div class="mb-8">
             <!-- Imagem do logotipo da empresa ou foto de perfil -->
             <!-- Alterado para w-full para ter a mesma largura do cartão e h-40 para manter um tamanho definido -->
-            <img 
-                src="./images/logo.png" 
-                alt="Logotipo MasterPlan Imóveis" 
-                class="w-full h-40 mx-auto mb-4 object-contain" 
+            <img
+                src="./images/logo.png"
+                alt="Logotipo MasterPlan Imóveis"
+                class="w-full h-40 mx-auto mb-4 object-contain"
                 onerror="this.onerror=null;this.src='https://placehold.co/160x160/cccccc/000000?text=Erro';"
             >
             <!-- Slogan ou descrição da empresa -->
@@ -41,10 +49,10 @@
         <!-- Seção de links da empresa -->
         <div class="space-y-6 mb-8">
             <!-- Link 1: Website Oficial - Degradê Azul -->
-            <a 
-                href="https://masterplanresende.com.br" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://masterplanresende.com.br"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-blue-500 hover:to-blue-700 hover:shadow-blue-900 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -53,10 +61,10 @@
                 <span class="flex-grow text-center">Acesse nosso site</span>
             </a>
             <!-- Link 2: Buscar Imóveis - Degradê Teal -->
-            <a 
-                href="https://masterplanresende.com.br/busca" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://masterplanresende.com.br/busca"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-teal-500 to-teal-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-teal-400 hover:to-teal-600 hover:shadow-teal-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -65,10 +73,10 @@
                 <span class="flex-grow text-center">Busque um imóvel</span>
             </a>
             <!-- Link 3: Fale Conosco no WhatsApp - Degradê Verde -->
-            <a 
-                href="https://api.whatsapp.com/send?phone=5524992661518&text=Ol%C3%A1%2C%20estou%20visitando%20o%20site%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://api.whatsapp.com/send?phone=5524992661518&text=Ol%C3%A1%2C%20estou%20visitando%20o%20site%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-green-500 to-green-700 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-green-400 hover:to-green-600 hover:shadow-green-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -77,10 +85,10 @@
                 <span class="flex-grow text-center">Fale com a gente no WhatsApp</span>
             </a>
             <!-- Link 4: Instagram - Degradê Rosa/Roxo -->
-            <a 
-                href="https://www.instagram.com/masterplan.resende/" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://www.instagram.com/masterplan.resende/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-pink-500 to-purple-600 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-pink-400 hover:to-purple-500 hover:shadow-purple-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -89,10 +97,10 @@
                 <span class="flex-grow text-center">Siga-nos no Instagram</span>
             </a>
             <!-- Link 5: Facebook - Degradê Azul Escuro -->
-            <a 
-                href="https://www.facebook.com/people/Master-Plan-Resende/61568457718067/" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://www.facebook.com/people/Master-Plan-Resende/61568457718067/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-blue-700 to-blue-900 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-blue-600 hover:to-blue-800 hover:shadow-blue-950 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -101,10 +109,10 @@
                 <span class="flex-grow text-center">Siga-nos no Facebook</span>
             </a>
             <!-- Link 6: Canal no YouTube - Degradê Vermelho -->
-            <a 
-                href="https://www.youtube.com/@masterplanresende" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://www.youtube.com/@masterplanresende"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-red-600 to-red-800 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-red-500 hover:to-red-700 hover:shadow-red-900 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -113,10 +121,10 @@
                 <span class="flex-grow text-center">Veja nosso canal no YouTube</span>
             </a>
             <!-- Link 7: Nosso Endereço / Contato - Degradê Cinza -->
-            <a 
-                href="mailto:contato@masterplanresende.com.br" 
+            <a
+                href="mailto:contato@masterplanresende.com.br"
                 target="_blank"
-                rel="noopener noreferrer" 
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-gray-600 to-gray-800 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-gray-500 hover:to-gray-700 hover:shadow-gray-900 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -125,10 +133,10 @@
                 <span class="flex-grow text-center">Mande-nos um e-mail</span>
             </a>
             <!-- Link 8: LinkedIn - Degradê Azul Profundo -->
-            <a 
-                href="https://www.linkedin.com/company/masterplan-imóveis-ltda/" 
-                target="_blank" 
-                rel="noopener noreferrer" 
+            <a
+                href="https://www.linkedin.com/company/masterplan-imóveis-ltda/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full bg-gradient-to-r from-blue-900 to-blue-950 text-white py-4 px-6 rounded-lg text-lg font-semibold shadow-xl hover:from-blue-800 hover:to-blue-900 hover:shadow-blue-950 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102 flex items-center"
             >
                 <div class="w-12 flex items-center justify-center flex-shrink-0">
@@ -155,7 +163,7 @@
             </div>
             <p class="text-gray-600 text-sm mt-4">Visite-nos em nosso endereço: Avenida Luiz Dias Martins, 37, Alphapark, Parque Ipiranga, Resende - RJ, 27511-970. Use o mapa para traçar sua rota!</p>
         </div>
-        
+
         <!-- Rodapé da empresa -->
         <div class="mt-8 text-gray-500 text-sm">
             <p>&copy; 2025 MasterPlan Imóveis. Todos os direitos reservados.</p>
